--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -11,29 +11,37 @@
   background-size: cover;
   h1 {
     font-family: 'Varela Round';
-    font-size: 2.5rem;
-    line-height: 2.5rem;
+    font-size: 2.0rem;
+    line-height: 2.0rem;
     letter-spacing: 0.8rem;
     background: -webkit-linear-gradient(fade-out(white, 0.1), fade-out(white, 1));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
   }
+  img {
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+    border: 0.2rem solid #64a19d;
+    
+  }
+  
   h2 {
     max-width: 20rem;
     font-size: 1rem;
   }
   @media(min-width: 768px) {
     h1 {
-      font-size: 4rem;
-      line-height: 4rem;
+      font-size: 2rem;
+      line-height: 2rem;
     }
   }
   @media(min-width: 992px) {
     height: 100vh;
     padding: 0;
     h1 {
-      font-size: 6.5rem;
-      line-height: 6.5rem;
+      font-size: 4.5rem;
+      line-height: 4.5rem;
       letter-spacing: 0.8rem;
     }
     h2 {
