added particles js

--- a/scss/grayscale.css
+++ b/scss/grayscale.css
@@ -86,12 +86,9 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.3)), color-stop(75%, rgba(22, 22, 22, 0.7)), to(#161616)), url("../img/bg-masthead.jpg");
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/bg-masthead.jpg");
   background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
   background-size: cover;
+  z-index: 50;
 }
 
 .masthead h1 {
@@ -277,6 +274,16 @@
 body {
   font-family: 'Nunito';
   letter-spacing: 0.0625em;
+}
+
+#particles-js {
+  height: 100%;
+  width: 100%;
+  background: black;
+  z-index: 30;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 a {
