--- a/scss/grayscale.css
+++ b/scss/grayscale.css
@@ -110,7 +110,7 @@
 
 .masthead h2 {
   max-width: 20rem;
-  font-size: 1rem;
+  font-size: 1.25rem;
 }
 
 @media (min-width: 768px) {
@@ -132,7 +132,7 @@
   }
   .masthead h2 {
     max-width: 30rem;
-    font-size: 1.25rem;
+    font-size: 2rem;
   }
 }
 
@@ -165,9 +165,7 @@
 }
 
 .about-section {
-  padding-top: 10rem;
-  background: -webkit-gradient(linear, left top, left bottom, from(#161616), color-stop(75%, rgba(22, 22, 22, 0.9)), to(rgba(22, 22, 22, 0.8)));
-  background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 75%, rgba(22, 22, 22, 0.8) 100%);
+  background-size: cover;
 }
 
 .about-section p {
@@ -175,7 +173,7 @@
 }
 
 .projects-section {
-  padding: 10rem 0;
+  padding: 15rem 0;
 }
 
 .projects-section .featured-text {
@@ -277,13 +275,14 @@ body {
 }
 
 #particles-js {
-  height: 100%;
+  height: 150%;
   width: 100%;
   background: black;
   z-index: 30;
   position: absolute;
   top: 0;
   left: 0;
+  border-bottom: 0.25rem solid #64a19d;
 }
 
 a {
