--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -14,13 +14,14 @@ body {
 }
 
 #particles-js{
-  height: 100%;
+  height: 150%;
   width: 100%;
   background: black;
   z-index: 30;
   position: absolute;
   top: 0;
   left: 0;
+  border-bottom: 0.25rem solid #64a19d
 
 }
 
