--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -27,6 +27,17 @@
 }
 
 .carousel-inner{
-  border: 0.25rem solid #64a19d
+  border: 0.25rem solid #64a19d;
+  img{
+    height: 30vh;
+    object-fit: cover; 
+    @media (min-width: 750px){
+      height: 55vh;
+      object-fit: cover; 
+      
+    }
+
+  }
+  }
   
-}
+
