--- a/scss/grayscale.css
+++ b/scss/grayscale.css
@@ -211,6 +211,20 @@
   border: 0.25rem solid #64a19d;
 }
 
+.carousel-inner img {
+  height: 30vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media (min-width: 750px) {
+  .carousel-inner img {
+    height: 55vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+
 .signup-section {
   padding: 10rem 0;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg-signup.jpg");
