--- a/scss/grayscale.css
+++ b/scss/grayscale.css
@@ -1,6 +1,8 @@
 #mainNav {
   min-height: 56px;
   background-color: #fff;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #mainNav .navbar-toggler {
@@ -219,7 +221,7 @@
 
 @media (min-width: 750px) {
   .carousel-inner img {
-    height: 55vh;
+    height: 60vh;
     -o-object-fit: cover;
        object-fit: cover;
   }
