--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,6 +1,7 @@
 #mainNav {
   min-height: 56px;
   background-color: $white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   .navbar-toggler {
     font-size: 80%;
     padding: 0.75rem;
