--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -1,12 +1,8 @@
-/*!
- * Start Bootstrap - Grayscale v5.0.8 (https://startbootstrap.com/template-overviews/grayscale)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
- */
-
 #mainNav {
   min-height: 56px;
   background-color: #fff;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #mainNav .navbar-toggler {
@@ -92,33 +88,37 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.3)), color-stop(75%, rgba(22, 22, 22, 0.7)), to(#161616)), url("../img/bg-masthead.jpg");
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/bg-masthead.jpg");
   background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
   background-size: cover;
+  z-index: 50;
 }
 
 .masthead h1 {
   font-family: 'Varela Round';
-  font-size: 2.5rem;
-  line-height: 2.5rem;
+  font-size: 2.0rem;
+  line-height: 2.0rem;
   letter-spacing: 0.8rem;
   background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
 
+.masthead img {
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
+  border: 0.2rem solid #64a19d;
+}
+
 .masthead h2 {
   max-width: 20rem;
-  font-size: 1rem;
+  font-size: 1.25rem;
 }
 
 @media (min-width: 768px) {
   .masthead h1 {
-    font-size: 4rem;
-    line-height: 4rem;
+    font-size: 2rem;
+    line-height: 2rem;
   }
 }
 
@@ -128,19 +128,19 @@
     padding: 0;
   }
   .masthead h1 {
-    font-size: 6.5rem;
-    line-height: 6.5rem;
+    font-size: 4.5rem;
+    line-height: 4.5rem;
     letter-spacing: 0.8rem;
   }
   .masthead h2 {
     max-width: 30rem;
-    font-size: 1.25rem;
+    font-size: 2rem;
   }
 }
 
 .btn {
   -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
-  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
+          box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
   padding: 1.25rem 2rem;
   font-family: 'Varela Round';
   font-size: 80%;
@@ -167,9 +167,7 @@
 }
 
 .about-section {
-  padding-top: 10rem;
-  background: -webkit-gradient(linear, left top, left bottom, from(#161616), color-stop(75%, rgba(22, 22, 22, 0.9)), to(rgba(22, 22, 22, 0.8)));
-  background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 75%, rgba(22, 22, 22, 0.8) 100%);
+  background-size: cover;
 }
 
 .about-section p {
@@ -177,7 +175,7 @@
 }
 
 .projects-section {
-  padding: 10rem 0;
+  padding: 15rem 0;
 }
 
 .projects-section .featured-text {
@@ -207,6 +205,28 @@
   }
 }
 
+.additional-border {
+  margin-bottom: 5rem;
+}
+
+.carousel-inner {
+  border: 0.25rem solid #64a19d;
+}
+
+.carousel-inner img {
+  height: 30vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media (min-width: 750px) {
+  .carousel-inner img {
+    height: 60vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+
 .signup-section {
   padding: 10rem 0;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg-signup.jpg");
@@ -219,7 +239,7 @@
 
 .signup-section .form-inline input {
   -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
-  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
+          box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
   padding: 1.25rem 2rem;
   height: auto;
   font-family: 'Varela Round';
@@ -278,6 +298,17 @@ body {
   letter-spacing: 0.0625em;
 }
 
+#particles-js {
+  height: 150%;
+  width: 100%;
+  background: black;
+  z-index: 30;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-bottom: 0.25rem solid #64a19d;
+}
+
 a {
   color: #64a19d;
 }
@@ -302,3 +333,4 @@ a:focus, a:hover {
 footer {
   padding: 5rem 0;
 }
+/*# sourceMappingURL=grayscale.css.map */
