--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -305,7 +305,7 @@ body {
 }
 
 #particles-js {
-  height: 150%;
+  height: 170%;
   width: 100%;
   background: black;
   z-index: 30;
@@ -313,6 +313,12 @@ body {
   top: 0;
   left: 0;
   border-bottom: 0.25rem solid #64a19d;
+}
+
+@media (min-width: 500px) {
+  #particles-js {
+    height: 150%;
+  }
 }
 
 a {
